--- a/src/app/components/create-quiz/create-quiz.component.html
+++ b/src/app/components/create-quiz/create-quiz.component.html
@@ -31,4 +31,4 @@
     <app-quiz-questions [results]="questionResult.results"></app-quiz-questions>
   </div>
 
-  <ngx-spinner bdColor="rgba(51,51,51,0.8)" size="large" color="#fff" type="ball-scale-multiple" [fullScreen] = "true"></ngx-spinner>
+  <ngx-spinner bdColor="rgba(51,51,51,0.8)" size="large" color="#fff" type="line-scale" [fullScreen] = "true"></ngx-spinner>
